# FarsiTranscribe

./: .codecov.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  95_PERCENT_QUALITY_GUIDE.md  =1.9.0  =3.0.0  CHANGELOG.md  CHUNK_ANALYSIS_GUIDE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_FIX_SUMMARY.md  CONTRIBUTING.md  DIARIZATION.md  DIARIZATION_README.md  ENHANCED_PREVIEW_README.md  LICENSE  MEMORY_OPTIMIZATION.md  Makefile  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUALITY_IMPROVEMENTS_GUIDE.md  QUICK_START.md  README.md  RTL_ENHANCEMENT_README.md  TRAINING.md  UTILS_CONSOLIDATION_SUMMARY.md  activate_env.sh  cleanup.py  cleanup_project.py  cuda_diagnostics.py  demo_transcription.py  farsi_transcribe.py  format-code.sh  install_advanced_preprocessing.sh  install_preprocessing.sh  install_pyannote.py  (+16 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backup_original/: src_core_transcriber.py  src_utils_chunk_calculator.py
data/raw/: dataset_info.json
docs/: CLEANUP_SUMMARY.md  PROJECT_STATUS.md
examples/: advanced_usage.py  basic_usage.py
farsi_transcribe/: __init__.py  __main__.py  audio.py  cli.py  config.py  core.py  utils.py
scripts/: analyze_chunks.py  cleanup.py  cleanup_repo.py  debug_display.py  download_farsi_asr.py  setup-dev.sh  setup_dev.py  test_comprehensive_fix.py  test_memory_optimization.py  train_whisper_fa.py
src/: __init__.py
src/core/: __init__.py  advanced_transcriber.py  cli.py  config.py  transcriber.py
src/finetuning/configs/: __init__.py  finetuning_config.py
src/finetuning/scripts/: download_datasets.py
src/finetuning/utils/: __init__.py  audio_augmenter.py  data_preprocessor.py  dataset_builder.py  text_normalizer.py
src/preprocessing/: __init__.py  audio_preprocessor.py
src/training/: __init__.py  data_prep.py  train_whisper.py
src/utils/: __init__.py  advanced_audio_preprocessor.py  advanced_model_ensemble.py  audio_preprocessor.py  chunk_calculator.py  enhanced_audio_preprocessor.py  enhanced_memory_manager.py  enhanced_preview_display.py  file_manager.py  performance_monitor.py  persian_text_postprocessor.py  preprocessing_validator.py  pyannote_diarizer.py  quality_assessor.py  repetition_detector.py  rtl_terminal_display.py  sentence_extractor.py  speaker_diarization.py  terminal_display.py  unified_audio_preprocessor.py  unified_memory_manager.py  unified_terminal_display.py
tests/: __init__.py  test_config.py  test_device_detection.py  test_system.py  test_transcription.py  test_transcription_fallback.py  test_utils.py  test_workers.py
